--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -365,13 +365,24 @@
       width: 100%;
       margin-top: 25px;
     }
+  }
 
-    .category-filter {
-      margin-right: -8px;
+  .category-filter {
+    margin-right: -8px;
+    flex: 1;
+    margin-top: -14px;
 
-      @include screen('md') {
-        margin-right: 0;
-      }
+    @include screen('md') {
+      margin-top: 20px;
+      margin-right: 0;
+      flex: none;
+      width: 100%;
+    }
+
+    @include screen('sm') {
+      margin-top: 0;
+      flex: 1;
+      width: auto;
     }
   }
 
