--- a/app/blocks/category-filter/category-filter.scss
+++ b/app/blocks/category-filter/category-filter.scss
@@ -5,16 +5,14 @@
   justify-content: flex-end;
   align-items: center;
 
-  @include screen('md') {
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 100%;
-  }
+  &__select {
+    @include screen('md') {
+      width: 100%;
+    }
 
-  @include screen('sm') {
-    justify-content: flex-start;
-    flex-direction: column;
-    align-items: flex-start;
+    @include screen('sm') {
+      width: auto;
+    }
   }
 
   &__item {
