--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -16,7 +16,7 @@ block content
         +link(href="host-space-offers.html") My rental offers - One Space (HOST) (host-space-offers.html)
         +link(href="blog.html") Blog (blog.html)
         +link(href="blog-article.html") Blog article (blog-article.html)
-        +link(href="favourites.html") Favourites (Tablet & Desktop Ready, Mobile NOT READY) (favourites.html)
+        +link(href="favourites.html") Favourites (favourites.html)
         +link(href="messages.html") Messages (messages.html)
         +link(href="conversation.html") Messages One Conversation (conversation.html)
         +link(href="reservation-history.html") Reservation History (reservation-history.html)
