unfinished space-offer

--- a/app/blocks/form-elements/form-selects.scss
+++ b/app/blocks/form-elements/form-selects.scss
@@ -833,13 +833,13 @@
       }
     }
 
-    // &.is-item-select #{$k}__inner {
-    //   font-weight: 700;
-    // }
+    &.is-item-select #{$k}__inner {
+      font-weight: 700;
+    }
 
-    // &.is-item-select #{$k}__list--single {
-    //   border-color: $color-basic;
-    // }
+    &.is-item-select #{$k}__list--single {
+      border-color: $color-basic;
+    }
   }
 
   &_input2 {
@@ -966,13 +966,13 @@
       }
     }
 
-    // &.is-item-select #{$k}__inner {
-    //   font-weight: 700;
-    // }
+    &.is-item-select #{$k}__inner {
+      font-weight: 700;
+    }
 
-    // &.is-item-select #{$k}__list--single {
-    //   border-color: $color-basic;
-    // }
+    &.is-item-select #{$k}__list--single {
+      border-color: $color-basic;
+    }
   }
 
   &_popup {
