--- a/app/blocks/button/button.pug
+++ b/app/blocks/button/button.pug
@@ -16,5 +16,5 @@ mixin button-plus(newtag)
     +e.icon_plus
 
 mixin button-plus-thin
-  +b.BUTTON.button-plus-thin&attributes(attributes)
+  +b.A(href='javascript:;').button-plus-thin&attributes(attributes)
     +icon('plus-thin')
