--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -322,5 +322,21 @@
     .textarea {
       padding-right: 30px;
     }
+
+    &_left {
+      .input {
+        padding-right: 0;
+        padding-left: 25px;
+      }
+
+      #{$b}__icon {
+        right: auto;
+        left: 0;
+      }
+
+      #{$b}__label {
+        transform: translateX(25px);
+      }
+    }
   }
 }
