signup guest important info

--- a/app/blocks/form-toggle/form-toggle.pug
+++ b/app/blocks/form-toggle/form-toggle.pug
@@ -8,6 +8,8 @@ mixin form-toggle(data)
     +e.content
       if data.arrow
         +icon('arrow3').__arrow
+      if data.check
+        +icon('check').__check
       if data.subtitle
         +e.subtitle!= data.subtitle
       if data.title
