--- a/app/pages/signup-host-info/signup-host-info.pug
+++ b/app/pages/signup-host-info/signup-host-info.pug
@@ -37,7 +37,7 @@ block content
               +e.line
                 +steps-text Add Space (optional)
                 +icon('check').__check
-        +col({ xl: 8, md: 10, md: 12})
+        +col({ xl: 8, lg: 10, md: 12})
           +form()(data-validated-form)
             +form-section._mg50
               +form-section-header._mg0
