--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -51,6 +51,7 @@ block content
         +link(href="deal-passport-viewing.html") SpacePool - Deal Passport Viewing Confimation required HOST (deal-passport-viewing.html)
         +link(href="deal-passport-viewing2.html") SpacePool - Deal Passport Viewing Confimation required GUEST (deal-passport-viewing2.html)
         +link(href="deal-passport-viewing3.html") SpacePool - Deal Passport Viewing Confirmed(deal-passport-viewing3.html)
+        +link(href="signup-guest-info.html") Sign Up guest important info (signup-guest-info.html)
 
       +page-title._small Попапы
       +e.list
