--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -182,6 +182,12 @@
       }
     }
 
+    &_mg82 {
+      &:not(:last-of-type) {
+        margin-bottom: 82px;
+      }
+    }
+
     &_mg88 {
       &:not(:last-of-type) {
         margin-bottom: 88px;
@@ -197,6 +203,16 @@
     &_mg105 {
       &:not(:last-of-type) {
         margin-bottom: 105px;
+      }
+    }
+
+    &_mg121 {
+      &:not(:last-of-type) {
+        margin-bottom: 121px;
+
+        @include screen('sm') {
+          margin-bottom: 100px;
+        }
       }
     }
 
@@ -234,6 +250,10 @@
 
     &_mt-8 {
       margin-top: -8px;
+    }
+
+    &_mt89 {
+      margin-top: 89px;
     }
 
     &_underline {
@@ -361,6 +381,10 @@
       }
     }
 
+    &_mg37 {
+      margin-bottom: 37px;
+    }
+
     &_mg40 {
       margin-bottom: 40px;
 
@@ -369,12 +393,20 @@
       }
     }
 
+    &_mg42 {
+      margin-bottom: 42px;
+    }
+
     &_mg43 {
       margin-bottom: 43px;
 
       @include screen('sm') {
         margin-bottom: 20px;
       }
+    }
+
+    &_mg44 {
+      margin-bottom: 44px;
     }
 
     &_mg46 {
@@ -1826,6 +1858,10 @@
         }
       }
     }
+  }
+
+  &__switch {
+    height: 100%;
   }
 
   &_lg-shft20 {
