--- a/app/pages/order-summary/order-summary.pug
+++ b/app/pages/order-summary/order-summary.pug
@@ -18,7 +18,7 @@ block content
   +content-origin._reverse._wide-lg._last
     - var offers = getData('offer-select.json')
     .container
-      +e.wrapper
+      +e.wrapper.js-compensate-wrap
         +content-column-aside
           +sidebar._no-bg
             +space-reservation()._side._bmg
