--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -83,6 +83,12 @@
       left: 19px;
     }
 
+    &_folder {
+      width: 17px;
+      height: 15px;
+      left: 23px;
+    }
+
     &_plus {
       right: auto;
       left: 21px;
