--- a/app/blocks/filter-select/filter-select.scss
+++ b/app/blocks/filter-select/filter-select.scss
@@ -156,6 +156,40 @@
         margin-right: 0;
       }
     }
+
+    &_mr56 {
+      &:not(:last-child) {
+        margin-right: 56px;
+
+        @include screen('md') {
+          margin-right: 23px;
+        }
+
+        @include screen('sm') {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+
+  &__link {
+    @include heading-3;
+
+    text-align: center;
+    line-height: 1.2;
+    font-weight: 700;
+
+    @include screen('md') {
+      @include heading-5;
+
+      line-height: 1.2;
+    }
+
+    @include screen('sm') {
+      @include text13;
+
+      line-height: 1.2;
+    }
   }
 
   &_cat {
