--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -457,8 +457,24 @@
       }
     }
 
+    &_mg64 {
+      margin-bottom: 64px;
+
+      @include screen('sm') {
+        margin-bottom: 50px;
+      }
+    }
+
     &_mg65 {
       margin-bottom: 65px;
+
+      @include screen('sm') {
+        margin-bottom: 50px;
+      }
+    }
+
+    &_mg67 {
+      margin-bottom: 67px;
 
       @include screen('sm') {
         margin-bottom: 50px;
@@ -591,6 +607,16 @@
         @include text16;
 
         line-height: (26 / 16);
+      }
+    }
+
+    &_fz24  {
+      @include text24;
+
+      font-weight: 700;
+
+      @include screen('sm') {
+        @include heading-4;
       }
     }
 
@@ -1876,12 +1902,6 @@
     }
   }
 }
-
-// [data-point-object]:last-child {
-//   .form-box__delete {
-//     display: none;
-//   }
-// }
 
 .error-message {
   @include text;
