--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -891,6 +891,16 @@
   &__text {
     width: 100%;
 
+    &_fz14 {
+      @include text;
+
+      line-height: (26/14);
+    }
+
+    &_gray {
+      color: $color-basic-light;
+    }
+
     &_mw60 {
       max-width: 60%;
 
