--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -136,6 +136,14 @@
           padding-top: 10px;
         }
       }
+
+      &#{$b}__column_ptp33 {
+        padding-top: 33px;
+
+        @include screen('lg') {
+          padding-top: 30px;
+        }
+      }
     }
 
     &_aside {
@@ -308,6 +316,12 @@
       @include screen('sm') {
         margin-bottom: 0;
       }
+    }
+  }
+
+  &__filter {
+    &:not(:last-child) {
+      margin-bottom: 57px;
     }
   }
 
