--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -34,6 +34,9 @@ include ../blocks/dropdown/dropdown
 include ../blocks/facility/facility
 include ../blocks/factor/factor
 include ../blocks/feature/feature
+include ../blocks/file-uploader/file-uploader
+include ../blocks/file/file
+include ../blocks/files-card/files-card
 include ../blocks/filter-dialog/filter-dialog
 include ../blocks/filter-list/filter-list
 include ../blocks/filter-name/filter-name
@@ -65,6 +68,7 @@ include ../blocks/informer/informer
 include ../blocks/invoice-info/invoice-info
 include ../blocks/link/link
 include ../blocks/lists/lists
+include ../blocks/loader/loader
 include ../blocks/logo/logo
 include ../blocks/long-arrow/long-arrow
 include ../blocks/map-switch/map-switch
@@ -95,6 +99,7 @@ include ../blocks/photo-preview/photo-preview
 include ../blocks/places/places
 include ../blocks/popups/popups
 include ../blocks/price/price
+include ../blocks/processing-status/processing-status
 include ../blocks/progress/progress
 include ../blocks/promo-section/promo-section
 include ../blocks/put-block-into-slot/put-block-into-slot
