--- a/app/styles/helpers/_animations.scss
+++ b/app/styles/helpers/_animations.scss
@@ -25,3 +25,30 @@
     box-shadow: 0 0 2px 12px rgba(#fff, 0);
   }
 }
+
+@keyframes cssload-spin {
+  0% {
+    box-shadow: 10px 10px rgb(41, 247, 134), -10px 10px rgb(223, 223, 223), -10px -10px rgb(41, 247, 134), 10px -10px rgb(223, 223, 223);
+    transform: rotate(0deg);
+  }
+
+  25% {
+    box-shadow: -10px 10px rgb(223, 223, 223), -10px -10px rgb(29, 212, 240), 10px -10px rgb(223, 223, 223), 10px 10px rgb(29, 212, 240);
+    transform: rotate(90deg);
+  }
+
+  50% {
+    box-shadow: -10px -10px rgb(235, 69, 51), 10px -10px rgb(223, 223, 223), 10px 10px rgb(235, 69, 51), -10px 10px rgb(223, 223, 223);
+    transform: rotate(180deg);
+  }
+
+  75% {
+    box-shadow: 10px -10px #dfdfdf, 10px 10px #ff9600, -10px 10px #dfdfdf, -10px -10px #ff9600;
+    transform: rotate(270deg);
+  }
+
+  100% {
+    box-shadow: 10px 10px rgb(41, 247, 134), -10px 10px rgb(223, 223, 223), -10px -10px rgb(41, 247, 134), 10px -10px rgb(223, 223, 223);
+    transform: rotate(360deg);
+  }
+}
