--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -6,6 +6,21 @@
   display: inline-block;
   box-sizing: border-box;
 
+  &::before {
+    @include pseudo;
+
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    background-color: $color-basic;
+    box-sizing: border-box;
+    z-index: 1;
+    transform: translate3d(-50%, -50%, 0);
+    opacity: 0;
+    pointer-events: none;
+  }
+
   &_icon {
     position: relative;
     padding-left: 38px;
@@ -74,6 +89,10 @@
       padding-left: 0;
       padding-right: 30px;
 
+      &_pr25 {
+        padding-right: 25px;
+      }
+
       &_pr44 {
         padding-right: 44px;
 
@@ -82,8 +101,12 @@
         }
       }
 
-      &_pr25 {
-        padding-right: 25px;
+      &_pr50 {
+        padding-right: 50px;
+
+        @include screen('sm') {
+          padding-right: 40px;
+        }
       }
     }
   }
@@ -317,6 +340,11 @@
       height: 19px;
     }
 
+    &_plus-thin {
+      width: 22px;
+      height: 22px;
+    }
+
     #{$b}_no-shadow & {
       filter: none;
     }
@@ -363,13 +391,60 @@
     }
   }
 
+  &__marker {
+    display: none;
+
+    #{$b}_mark & {
+      margin-left: 12px;
+    }
+
+    #{$b}.is-new & {
+      display: inline-block;
+    }
+  }
+
   &_bordered {
     @include link-bordered;
+  }
+
+  &_mark {
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   &.is-disabled {
     pointer-events: none;
 
     @include link-disabled;
+  }
+
+  &.is-select {
+    position: relative;
+    color: $color-white;
+
+    #{$b} {
+
+      &__text {
+        position: relative;
+        z-index: 2;
+        border-color: $color-basic;
+      }
+    }
+
+    &::before {
+      @include pseudo;
+
+      top: 50%;
+      left: 50%;
+      width: calc(100% + 16px);
+      height: calc(100% + 6px);
+      background-color: $color-basic;
+      box-sizing: border-box;
+      z-index: 1;
+      transform: translate3d(-50%, -50%, 0);
+      opacity: 1;
+      pointer-events: auto;
+    }
   }
 }
