--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -2910,6 +2910,15 @@ block content
         +ui-description .invoice-info.is-new
         +invoice-info({isnew: true, date: { iso: '2019-06-24', text: '24 June 2019'}, nameTag: 'a', name: 'One Heddon Street Center', price: '&pound; 1568.00', pay: true}).is-new
 
+    //- loader
+    +ui-section
+      +ui-section-head
+        h2 loader
+        p Блок: block/loader
+      +ui-section-content
+        +ui-description .loader
+        +loader
+
 block panels
   +main-menu
 
