--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -17,6 +17,7 @@ $grid-gap-big: 50px;
 $grid-gap-vertical-big: 60px;
 $grid-col-width: $grid-container-width / $grid-cols; // Ширина одной колонки
 $grid14-col-width: $grid-container-width / 14; // Ширина одной колонки в 14 колоночной сетке
+$grid9-col-width: $grid-container-width / 9; // Ширина одной колонки в 9  колоночной сетке
 $breakpoints: ('xl': 1600px, 'lg': 1300px, 'bg': 1160px, 'md': 1020px, 'sm': 768px, 'xs': 480px);
 $color-warning: #d56c4f;
 
